[package]
name = "kup-of-tea-be"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-identity = "0.7.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.5.1"
argon2 = "0.5.3"
deadpool-postgres = "0.12.1"
dotenv = "0.15.0"
num_cpus = "1.16.0"
serde = { version = "1.0.197", features = ["derive"] }
sha3 = "0.10.8"
tokio-postgres = { version="0.7.10", features = ["with-chrono-0_4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
